force-app/main/default/objects/Status_History__c/fields/HCP_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>HCP_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP Enrollment</label>
    <referenceTo>HCP_Enrollment__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>StatusHistory</relationshipName>
    <type>Lookup</type>
</CustomField>