force-app/main/default/objects/Status_History__c/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>