force-app/main/default/objects/Status_History__c/fields/StudySite__c.field-meta.xml
<CustomField>
    <fullName>StudySite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>